fixed conflict between overflow-x and sticky

--- a/components/landing/contact/styles.module.sass
+++ b/components/landing/contact/styles.module.sass
@@ -5,18 +5,6 @@
         repeat: no-repeat
     font-size: 1rem
     position: relative
-.bgFigure
-    right: 0
-    position: absolute
-    height: 100%
-    width: 20em
-    opacity: .4
-.bgFigureLeft
-    @extend .bgFigure
-    display: none
-    top: 0
-    left: 0
-    transform: rotate(180deg)
 .container
     transform: translateX(-110%)
     transition: 
@@ -27,6 +15,7 @@
     flex-direction: column
     justify-content: center
     align-items: center
+    overflow-x: hidden
 ////////////////////////////////////////
 .slideInLeftAnimation
     transform: translateX(0)
