--- a/components/landing/skills/styles.module.sass
+++ b/components/landing/skills/styles.module.sass
@@ -16,17 +16,6 @@
         repeat: no-repeat
     font-size: 1rem
     position: relative
-.bgFigure
-    right: 0
-    position: absolute
-    height: 100%
-    width: 13em
-    opacity: .4
-.bgFigureLeft
-    @extend .bgFigure
-    top: 0
-    left: 0
-    transform: rotate(180deg)
 
 .container
     opacity: 0
