--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -5,7 +5,6 @@ html , body
 body
   text-align: center
   color: white
-  overflow-x: hidden
   font:
     // family: 'Baloo Tammudu 2', cursive
     family: 'Roboto', sans-serif
